<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        >

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/photoPickerButton"
            android:background="@android:drawable/ic_menu_gallery"/>

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/photoPickerButton1"
            android:layout_toEndOf="@id/photoPickerButton"
            android:background="@android:drawable/ic_menu_gallery"/>

        <ImageButton
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:id="@+id/photoPickerButton2"
            android:layout_toEndOf="@id/photoPickerButton1"
            android:background="@android:drawable/ic_menu_gallery"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        >



        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:hint="@string/nameHint"
            />

        <EditText
            android:id="@+id/descriptionEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/descriptionHint"
            />

        <EditText
            android:id="@+id/priceEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/priceHint"
            />

        <EditText
            android:id="@+id/addressEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/addressHint"
            />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/save_button_label"/>

    </LinearLayout>
</LinearLayout>

