<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:id="@+id/backbtn"
        android:src="@drawable/back"/>

    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/frame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    <android.support.v4.view.ViewPager
        android:id="@+id/images"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

        <ImageButton
            android:id="@+id/left"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:src="@drawable/left"
            android:layout_gravity="center_vertical|left"/>
        <ImageButton
            android:id="@+id/right"
            android:src="@drawable/right"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:layout_gravity="center_vertical|right"
            />
    </FrameLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:text="@string/description"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/frame"
        android:paddingStart="20dp"/>

    <TextView
        android:id="@+id/price"
        android:layout_width="300dp"
        android:layout_height="20dp"
        android:text="@string/price"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/description"
        android:paddingStart="20dp"/>

    <LinearLayout
        android:id="@+id/userinfo"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/price">

        <ImageView
            android:id="@+id/userpic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/user"
            android:src="@drawable/userimg" />

        <TextView
            android:id="@+id/user"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/user"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toBottomOf="@id/userpic" />
    </LinearLayout>


    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/userinfo"
        app:layout_constraintTop_toBottomOf="@id/price"
        tools:context=".Controller.Item" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@id/map"
        app:layout_constraintRight_toRightOf="@id/map">


        <Button
            android:id="@+id/btn1"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:text="@string/normal"
            android:textSize="8sp" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:text="@string/satellite"
            android:textSize="8sp" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="65dp"
            android:layout_height="30dp"
            android:text="@string/hybrid"
            android:textSize="8sp" />
    </LinearLayout>

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@+id/map" />

    <LinearLayout
        android:id="@+id/datelayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintLeft_toLeftOf="@id/userinfo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line">

        <Button
            android:id="@+id/datebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datebtn"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/datebtn" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/timelayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/datelayout">

        <Button
            android:id="@+id/timebtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timebtn"
            android:textSize="10sp"/>

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/timebtn" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/durationlayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        app:layout_constraintTop_toBottomOf="@id/timelayout">

        <TextView
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/minus"
            app:layout_constraintLeft_toRightOf="@id/duration" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="1"
            android:textSize="14sp"
            app:layout_constraintLeft_toRightOf="@id/minus"
            app:layout_constraintRight_toLeftOf="@id/plus" />

        <ImageButton
            android:id="@+id/plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/plus"
            app:layout_constraintLeft_toRightOf="@id/number" />

    </LinearLayout>

    <EditText
        android:id="@+id/msg"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextbox"
        android:text="@string/msg"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/durationlayout" />

    <Button
        android:id="@+id/request"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/request"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/msg"
        android:background="@android:color/holo_blue_dark"/>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/fab"
        android:layout_width="52dp"
        android:layout_height="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu_icon="@drawable/plus">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/save"
            app:fabSize="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message"
            app:fabSize="mini" />
    </com.github.clans.fab.FloatingActionMenu>


</android.support.constraint.ConstraintLayout>


