<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Controller.FrontPage">


    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp"
        tools:openDrawer="start">

        <include
            layout="@layout/app_bar_front_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <android.support.design.widget.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/nav_header_borrow_page"
            app:menu="@menu/activity_borrow_page_drawer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_vertical|center_horizontal">
        <LinearLayout
            android:id="@+id/btnlayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_borrow"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/borrow"
                android:text="@string/borrow" />

            <Button
                android:id="@+id/btn_lent"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lent"
                android:text="@string/lent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnlayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_history"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="75dp"
                android:background="@color/history"
                android:text="@string/history" />

            <Button
                android:id="@+id/btn_share_group"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="75dp"
                android:background="@color/share"
                android:text="@string/share" />
        </LinearLayout>
        </LinearLayout>


    </android.support.v4.widget.DrawerLayout>


</LinearLayout>